<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Register</string>
    <string name="derbylink"><a href="https://bit.ly/2YdWVil">Link to shoes</a></string>

    <string name="monklink"><a href="https://www.houseoffraser.co.uk/brand/ted-baker/ramink-double-toecap-monk-shoes-ai2474#colcode=ai247400">Link to shoes</a></string>

    <string name="oxfordlink"><a href="https://www.asos.com/asos-design/asos-oxford-shoes-in-leather/prd/4589241">Link to shoes</a></string>

    <string name="loaferlink"><a href="https://www.debenhams.com/webapp/wcs/stores/servlet/prod_10701_10001_084010455070_-1">Link to shoes</a></string>

    <string name="broguelink"><a href="https://www.herringshoes.co.uk/herring/henry-ii_brogues/chestnut-calf">Link to shoes</a></string>

    <string name="blucherlink"><a href="https://thursdayboots.com/products/mens-shoe-statesman-natural?collection=mens-shoes-blucher">Link to shoes</a></string>

    <string name="chelsealink"><a href="https://www.office.co.uk/view/product/office_catalog/2,10/2579500078">Link to shoes</a></string>

    <string name="stilettolink"><a href="https://www.debenhams.com/webapp/wcs/stores/servlet/prod_10701_10001_58958+2023848979_-1">Link to shoes</a></string>

    <string name="italianlink"><a href="https://www.selfridges.com/GB/en/cat/stuart-weitzman-nunakedstraight-glitter-sandals_641-10004-2855761609/?previewAttribute=Gold">Link to shoes</a></string>

    <string name="luigilink"><a href="https://www.girlie.uk.com/products/elegant-bow-side-slingback-mule-sandal-low-heel-patent-leather-2">Link to shoes</a></string>
</resources>
