<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookmarksActivity">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_margin="10dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp">

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="@android:dimen/thumbnail_height"
                        android:layout_height="@android:dimen/thumbnail_width"
                        app:srcCompat="@drawable/derby" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:text="Derby Shoes"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/favorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginEnd="11dp"
                        android:background="#00ffffff"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/textView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView"
                        android:layout_marginEnd="70dp"
                        android:layout_marginTop="44dp"
                        android:text="Black       £45" />

                    <TextView
                        android:id="@+id/linktext1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/derbylink" />

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/favorite_button"
                        android:layout_alignStart="@+id/textView"
                        android:text="Code: DERBY10" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/textView"
                        android:layout_marginBottom="72dp"
                        android:text="Discounted Price: £40.50" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>






            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/card2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp">


                    <ImageView
                        android:id="@+id/imageView4"
                        android:layout_width="@android:dimen/thumbnail_height"
                        android:layout_height="@android:dimen/thumbnail_width"
                        app:srcCompat="@drawable/oxford" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:text="Oxford Shoes"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/favorite_button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginEnd="11dp"
                        android:background="#00ffffff"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_marginTop="44dp"
                        android:layout_marginEnd="70dp"
                        android:text="Black       £15" />

                    <TextView
                        android:id="@+id/linktext2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/oxfordlink" />

                    <TextView
                        android:id="@+id/textView9322"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/favorite_button1"
                        android:layout_alignStart="@+id/textView3"
                        android:text="Code: OXFORD10" />


                    <TextView
                        android:id="@+id/textView1223232"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/textView3"
                        android:layout_marginBottom="72dp"
                        android:text="Discounted Price: £13.50" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>







            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/card3">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp">

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@android:dimen/thumbnail_height"
                        android:layout_height="@android:dimen/thumbnail_width"
                        app:srcCompat="@drawable/monk" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:textSize="18sp"
                        android:text="Monk Shoes"/>

                    <ImageButton
                        android:id="@+id/favorite_button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginEnd="11dp"
                        android:background="#00ffffff"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/textView101"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView4"
                        android:layout_marginEnd="70dp"
                        android:layout_marginTop="44dp"
                        android:text="Tan      £149" />

                    <TextView
                        android:id="@+id/linktext3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/textView4"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/monklink" />

                    <TextView
                        android:id="@+id/textView9232"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/favorite_button2"
                        android:layout_alignStart="@+id/textView4"
                        android:text="Code: MONK10" />


                    <TextView
                        android:id="@+id/textView153432"
                        android:layout_width="wrap_content"
                        android:layout_height="18dp"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/textView4"
                        android:layout_marginBottom="72dp"
                        android:text="Discounted Price: £134.10" />
                </RelativeLayout>
            </android.support.v7.widget.CardView>







            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/wcard1">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp">

                    <ImageView
                        android:id="@+id/wwimageView2"
                        android:layout_width="@android:dimen/thumbnail_height"
                        android:layout_height="@android:dimen/thumbnail_width"
                        app:srcCompat="@drawable/chelsea" />

                    <TextView
                        android:id="@+id/wwtextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:text="Chelsea Shoes"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/wwfavorite_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginEnd="11dp"
                        android:background="#00ffffff"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/wwtextView7"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/wwtextView"
                        android:layout_marginTop="44dp"
                        android:layout_marginEnd="70dp"
                        android:text="Black       £135" />

                    <TextView
                        android:id="@+id/wwwlinktext1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/wwtextView"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/chelsealink" />

                    <TextView
                        android:id="@+id/wwtextView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/wwfavorite_button"
                        android:layout_alignStart="@+id/wwtextView"
                        android:text="Code: CHELSEA10" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/wwtextView"
                        android:layout_marginBottom="72dp"
                        android:text=" Discounted Price: £121.50" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>






            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/wcard2">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="192dp">


                    <ImageView
                        android:id="@+id/wwimageView4"
                        android:layout_width="@android:dimen/thumbnail_height"
                        android:layout_height="@android:dimen/thumbnail_width"
                        app:srcCompat="@drawable/stiletto" />

                    <TextView
                        android:id="@+id/wwtextView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="200dp"
                        android:layout_alignParentTop="true"
                        android:layout_marginTop="12dp"
                        android:text="Stiletto Shoes"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/wwfavorite_button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="11dp"
                        android:layout_marginEnd="11dp"
                        android:background="#00ffffff"
                        android:src="@android:drawable/btn_star_big_on" />

                    <TextView
                        android:id="@+id/wwtextView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/wwtextView3"
                        android:layout_marginEnd="70dp"
                        android:layout_marginTop="44dp"
                        android:text="Tan       £49" />

                    <TextView
                        android:id="@+id/wwwlinktext2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_alignStart="@+id/wwtextView3"
                        android:layout_marginTop="75dp"
                        android:layout_marginEnd="70dp"
                        android:text="@string/stilettolink" />

                    <TextView
                        android:id="@+id/wwtextView9322"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/wwfavorite_button1"
                        android:layout_alignStart="@+id/wwtextView3"
                        android:text="Code: STILETTO10" />

                    <TextView
                        android:id="@+id/wwtextView85754"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignStart="@+id/wwtextView3"
                        android:layout_marginBottom="72dp"
                        android:text=" Discounted Price: £44.10" />

                </RelativeLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.constraint.ConstraintLayout>